# bare-agent-loop

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bare_agent/: __init__.py  __main__.py  agent.py  demo.py  memory.py  models.py  prompts.py  tools.py
docs/: blog-post.md
examples/buggy_math/: calculator.py  test_calculator.py
scripts/: lint.py  render_demo_svg.py
tests/: test_agent.py  test_cli.py  test_models.py  test_tools.py
